--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
-    <dependencies>
-    </dependencies>
 
     <build>
         <pluginManagement>
@@ -31,7 +29,19 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                        <goals>
+                            install
+                        </goals>
+                    </configuration>
+                </plugin>
             </plugins></pluginManagement>
     </build>
+    <scm>
+        <developerConnection>scm:git:https://github.com/amranwr/sfg-pet-clinic.git</developerConnection>
+    </scm>
 
 </project>
