adding maven release plugin

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Wed Aug 25 14:35:00 EET 2021
+#Wed Aug 25 14:36:32 EET 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.amr.springProject\:pet-clinic-web=0.0.3-SNAPSHOT
+project.scm.amr.springProject\:pet-clinic-web.empty=true
+project.scm.amr.springProject\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/amranwr/sfg-pet-clinic.git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.amr.springProject\:pet-clinic-web=0.0.2
+project.scm.amr.springProject\:pet-clinic-data.empty=true
+completedPhase=end-release
 scm.url=scm\:git\:https\://github.com/amranwr/sfg-pet-clinic.git
+project.scm.amr.springProject\:sfg-pet-clinic.tag=HEAD
+project.rel.amr.springProject\:sfg-pet-clinic=0.0.2
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.amr.springProject\:pet-clinic-data=0.0.3-SNAPSHOT
+scm.tag=sfg-pet-clinic-0.0.2
+project.rel.amr.springProject\:pet-clinic-data=0.0.2
+project.dev.amr.springProject\:sfg-pet-clinic=0.0.3-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
