update to java 11

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
     <name>sfg-pet-clinic</name>
     <description>sfg-pet-clinic</description>
     <properties>
+        <!-- update to java 11 -->
+        <!-- update pom.xml -->
+        <!-- then java compiler from the settings -->
+        <!-- then project structure (alt + f1) -->
         <java.version>11</java.version>
         <maven-compiler.source>${java.version}</maven-compiler.source>
         <maven-compiler.target>${java.version}</maven-compiler.target>
