--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>amr.springProject</groupId>
+            <artifactId>pet-clinic-web</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
