--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.banner.image.location=banner.txt
 
 spring.messages.basename = messages/messages
 spring.profiles.active= springDataJPAService
+spring.datasource.url=jdbc:h2:mem:testdb
